added admin waitlist endpoint
