# server-go/docs/swagger.yaml
@@ -1267,6 +1267,41 @@ paths:
       summary: Create event (Admin)
       tags:
       - admin-events
+  /admin/events/{event_id}/waitlist:
+    get:
+      description: Get waitlist for specific event. Available for any admin.
+      parameters:
+      - description: Event ID
+        in: path
+        name: event_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of waitlist users
+          schema:
+            items:
+              $ref: '#/definitions/domain.WaitlistUser'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get event waitlist (Admin)
+      tags:
+      - admin-waitlist
   /admin/events/{id}:
     delete:
       consumes:
