# server-go/pkg/gateways/rest/router.go
@@ -13,6 +13,7 @@ import (
 	"github.com/shampsdev/go-telegram-template/pkg/gateways/rest/admin_events"
 	"github.com/shampsdev/go-telegram-template/pkg/gateways/rest/admin_loyalties"
 	"github.com/shampsdev/go-telegram-template/pkg/gateways/rest/admin_users"
+	"github.com/shampsdev/go-telegram-template/pkg/gateways/rest/admin_waitlist"
 
 	"github.com/shampsdev/go-telegram-template/pkg/gateways/rest/club"
 	"github.com/shampsdev/go-telegram-template/pkg/gateways/rest/courts"
@@ -55,4 +56,5 @@ func setupRouter(ctx context.Context, r *gin.Engine, useCases usecase.Cases, cfg
 	admin_loyalties.Setup(v1, useCases)
 	admin_courts.Setup(v1, useCases)
 	admin_events.Setup(v1, useCases)
+	admin_waitlist.Setup(v1, useCases)
 }
